# ros2lings

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  info.toml
exercises/01_nodes/01_hello_node/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/01_hello_node/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/01_hello_node/src/: hello_node.cpp
exercises/01_nodes/01_hello_node/test/: test_hello_node.cpp
exercises/01_nodes/02_first_publisher/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/02_first_publisher/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/02_first_publisher/src/: first_publisher.cpp
exercises/01_nodes/02_first_publisher/test/: test_first_publisher.cpp
exercises/01_nodes/03_first_subscriber/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/03_first_subscriber/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/03_first_subscriber/src/: first_subscriber.cpp
exercises/01_nodes/03_first_subscriber/test/: test_first_subscriber.cpp
exercises/01_nodes/04_pubsub_connect/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/04_pubsub_connect/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/04_pubsub_connect/src/: pubsub_connect.cpp
exercises/01_nodes/04_pubsub_connect/test/: test_pubsub_connect.cpp
exercises/01_nodes/05_custom_message/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/05_custom_message/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/05_custom_message/msg/: SensorData.msg
exercises/01_nodes/05_custom_message/src/: custom_message.cpp
exercises/01_nodes/05_custom_message/test/: test_custom_message.cpp
exercises/01_nodes/06_multi_topic/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/06_multi_topic/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/06_multi_topic/src/: multi_topic.cpp
exercises/01_nodes/06_multi_topic/test/: test_multi_topic.cpp
exercises/01_nodes/07_topic_introspection/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/07_topic_introspection/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/07_topic_introspection/src/: topic_introspection.cpp
exercises/01_nodes/07_topic_introspection/test/: test_topic_introspection.cpp
exercises/01_nodes/08_node_lifecycle_basics/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/08_node_lifecycle_basics/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/08_node_lifecycle_basics/src/: node_lifecycle_basics.cpp
exercises/01_nodes/08_node_lifecycle_basics/test/: test_node_lifecycle_basics.cpp
exercises/01_nodes/11_subscriber_py/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/11_subscriber_py/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/11_subscriber_py/src/: subscriber_py.py
exercises/01_nodes/11_subscriber_py/test/: test_subscriber_py.py
exercises/01_nodes/12_qos_mismatch/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/12_qos_mismatch/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/12_qos_mismatch/src/: qos_mismatch.cpp
exercises/01_nodes/12_qos_mismatch/test/: test_qos_mismatch.cpp
exercises/01_nodes/13_component_node/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/13_component_node/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/13_component_node/src/: component_node.cpp
exercises/01_nodes/13_component_node/test/: test_component_node.cpp
exercises/01_nodes/14_namespace_remap/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/14_namespace_remap/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/14_namespace_remap/src/: namespace_remap.cpp
exercises/01_nodes/14_namespace_remap/test/: test_namespace_remap.cpp
exercises/01_nodes/15_multi_node_process/: CMakeLists.txt  explain.md  package.xml
exercises/01_nodes/15_multi_node_process/hints/: hint1.md  hint2.md  hint3.md
exercises/01_nodes/15_multi_node_process/src/: multi_node_process.cpp
exercises/01_nodes/15_multi_node_process/test/: test_multi_node_process.cpp
exercises/02_services/01_first_service/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/01_first_service/hints/: hint1.md  hint2.md  hint3.md
exercises/02_services/01_first_service/src/: first_service.cpp
exercises/02_services/01_first_service/test/: test_first_service.cpp
exercises/02_services/02_service_client/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/02_service_client/hints/: hint1.md  hint2.md  hint3.md
exercises/02_services/02_service_client/src/: service_client.cpp
exercises/02_services/02_service_client/test/: test_service_client.cpp
exercises/02_services/03_service_pair/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/03_service_pair/hints/: hint1.md  hint2.md  hint3.md
exercises/02_services/03_service_pair/src/: service_pair.cpp
exercises/02_services/03_service_pair/test/: test_service_pair.cpp
exercises/02_services/04_custom_srv/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/04_custom_srv/hints/: hint1.md  hint2.md  hint3.md
exercises/02_services/04_custom_srv/src/: custom_srv.cpp
exercises/02_services/04_custom_srv/srv/: ComputeArea.srv
exercises/02_services/04_custom_srv/test/: test_custom_srv.cpp
exercises/02_services/05_service_py/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/05_service_py/hints/: hint1.md  hint2.md  hint3.md
exercises/02_services/05_service_py/src/: service_py.py
exercises/02_services/05_service_py/test/: test_service_py.py
exercises/02_services/06_first_action_server/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/07_action_client/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/08_action_complete/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/09_custom_action/: CMakeLists.txt  explain.md  package.xml
exercises/02_services/10_action_py/: CMakeLists.txt  explain.md  package.xml
exercises/ros2lings_interfaces/: CMakeLists.txt  package.xml
src/: app_state.rs  (+10 more)
(+352 files in other folders)
