[package]
name = "ros2lings"
version = "0.1.0"
edition = "2021"
description = "Learn ROS2 by fixing broken code — like rustlings, but for ROS2"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
notify = "8"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
termimad = "0.30"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
